adds drawing page

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -20,3 +20,6 @@ $color19: #36b933;
 $color20: #f84949;
 $color21: #f6bb21;
 $color22: #346979;
+$color23: #b5b5bb;
+$color24: rgba(52, 105, 121, 0.05);
+$color25: #c1d8e1;
