--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -490,6 +490,517 @@
   }
 }
 
+.landing-container {
+  .section {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin: 150px 0;
+
+    @media screen and (min-width: 576px) {
+      padding-left: 5rem;
+      padding-right: 5rem;
+    }
+
+    @media screen and (max-width: 1220px) {
+      padding-left: 3rem;
+      padding-right: 3rem;
+    }
+  }
+
+  .page-container {
+    max-width: 1384px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .main-title {
+    margin-bottom: 50px;
+    text-align: center;
+    max-width: 840px;
+    margin-left: auto;
+    margin-right: auto;
+
+    h2 {
+      margin-bottom: 20px;
+    }
+  }
+
+  p {
+    color: $color6;
+    line-height: 1.75;
+    font-weight: 400;
+  }
+
+  .appbar {
+    .section {
+      margin: 0;
+    }
+
+    .header {
+      background-color: $color1;
+
+      * {
+        color: #fff;
+      }
+
+      .contact {
+        display: flex;
+
+        a {
+          display: flex;
+          padding: 16px 0;
+          align-items: center;
+          img {
+            margin-right: 15px;
+          }
+        }
+      }
+
+      .selected-text {
+        padding: 0;
+        border: 0;
+        padding-right: 40px;
+
+        &::after {
+          content: url(../vectors/select-arrow-white.svg);
+        }
+      }
+
+      .select-options {
+        top: calc(100% + 0.75rem);
+
+        .select-option {
+          color: $color3;
+        }
+      }
+    }
+
+    .navbar .page-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .logo {
+        img {
+          @media screen and (max-width: 1250px) {
+            width: 120px;
+          }
+        }
+      }
+
+      .nav-container {
+        display: flex;
+        align-items: center;
+
+        .nav {
+          margin-right: 54px;
+          gap: 30px;
+          display: flex;
+
+          @media screen and (max-width: 1250px) {
+            margin-right: 30px;
+            gap: 15px;
+          }
+
+          @media screen and (max-width: 1100px) {
+            margin-right: 20px;
+            gap: 10px;
+          }
+
+          a {
+            color: $color3;
+
+            @media screen and (max-width: 1100px) {
+              font-size: 14px;
+            }
+
+            &:hover {
+              text-decoration: none;
+              color: $color1;
+            }
+          }
+        }
+
+        .btns {
+          display: flex;
+          align-items: flex-start;
+
+          gap: 20px;
+
+          @media screen and (max-width: 1250px) {
+            gap: 10px;
+          }
+        }
+      }
+    }
+  }
+
+  .hero {
+    margin-top: 100px;
+
+    .title-sm {
+      position: relative;
+      padding-left: 55px;
+      color: $color6;
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 40px;
+        height: 5px;
+        background-color: $color1;
+        top: 50%;
+        transform: translate(0, -50%);
+      }
+    }
+
+    h1 {
+      @media screen and (min-width: 1440px) {
+        font-size: 70px;
+      }
+
+      @media screen and (max-width: 1100px) {
+        font-size: 42px;
+      }
+    }
+  }
+
+  .brands {
+    .row > * {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    img {
+      width: 100%;
+      max-width: 225px;
+    }
+  }
+
+  .contributors {
+    .designations {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 70px;
+
+      .designation-item {
+        position: relative;
+        display: flex;
+        align-items: center;
+        border-radius: 10px;
+        padding: 20px;
+        background-color: $color5;
+        width: 33.33%;
+
+        &::after {
+          content: "";
+          position: absolute;
+          width: 28.68px;
+          height: 28.68px;
+          left: 50%;
+          top: calc(100% - 16px);
+          background: $color1;
+          border-radius: 5px;
+          transform: matrix(0.71, 0.71, -0.7, 0.71, 0, 0);
+          opacity: 0;
+        }
+
+        h3 {
+          @media screen and (max-width: 1220px) {
+            font-size: 20px;
+          }
+        }
+
+        &.active {
+          background-color: $color1;
+
+          * {
+            color: #fff;
+          }
+
+          &::after {
+            opacity: 1;
+          }
+        }
+
+        h3 {
+          margin-left: 20px;
+        }
+      }
+    }
+
+    .role-rights {
+      .collapse {
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+        border-bottom: 1px solid $color17;
+
+        &-title {
+          padding: 0 0 20px;
+          border: 0;
+        }
+      }
+    }
+  }
+
+  .products {
+    .product-card {
+      background-color: $color9;
+      border-radius: 10px;
+      padding: 30px;
+    }
+  }
+
+  .integrations {
+    position: relative;
+    overflow: hidden;
+
+    .page-container {
+      &::after {
+        position: absolute;
+        content: "";
+        left: 50%;
+        top: -270px;
+        width: 540px;
+        border-radius: 50%;
+        height: 540px;
+        background-color: $color4;
+      }
+    }
+
+    .main {
+      background-color: $color1;
+      padding: 50px;
+      border-radius: 10px;
+
+      * {
+        color: #fff;
+      }
+
+      .text {
+        max-width: 421px;
+      }
+
+      .company-brands {
+        max-width: 488px;
+        // max-height: 192px;
+        margin-left: 3rem;
+        text-align: center;
+
+        .row > * {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+
+        img {
+          @media screen and (max-width: 1023px) {
+            transform: scale(0.8);
+          }
+        }
+      }
+    }
+  }
+
+  .switch-to-us {
+    h4 {
+      line-height: 1.5;
+    }
+  }
+
+  .testimonials {
+    overflow: hidden;
+
+    .left {
+      background-color: $color1;
+      padding: 50px;
+      border-radius: 10px;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+
+      @media screen and (max-width: 1400px) {
+        padding-left: 30px;
+        padding-right: 30px;
+      }
+
+      * {
+        color: #fff;
+      }
+
+      .text {
+        max-width: 420px;
+      }
+
+      .happy-card {
+        background-color: $color4;
+        border-radius: 10px;
+        padding: 30px;
+
+        @media screen and (max-width: 1300px) {
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+
+        img.icon {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+        }
+
+        .reviews {
+          img {
+            @media screen and (max-width: 1300px) {
+              width: 16px;
+            }
+          }
+        }
+      }
+    }
+
+    .right {
+      padding: 30px 30px 30px 0;
+      background-color: $color9;
+      border-radius: 10px;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+      height: 100%;
+
+      @media screen and (max-width: 1400px) {
+        padding: 20px 20px 20px 0;
+      }
+
+      .main {
+        padding: 40px 40px 40px 70px;
+        background-color: #fff;
+        height: 100%;
+
+        @media screen and (max-width: 1400px) {
+          padding: 30px 30px 30px 50px;
+        }
+
+        .slides {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+
+          .main-slides {
+            flex-grow: 1;
+
+            .comment {
+              line-height: 1.75;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .number-1 {
+    .main-title {
+      max-width: 1070px;
+    }
+
+    .swiper-wrap {
+      position: relative;
+
+      .swiper-slide {
+        height: auto;
+      }
+
+      .btn-slider-nav {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 10;
+        width: 50px;
+        height: 50px;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        img {
+          margin: 0;
+        }
+
+        &.next {
+          left: calc(100% + 20px);
+
+          @media screen and (max-width: 1600px) {
+            left: calc(100% + 10px);
+          }
+
+          @media screen and (max-width: 1200px) {
+            left: calc(100% - 50px - 10px);
+          }
+        }
+
+        &.prev {
+          right: calc(100% + 20px);
+
+          @media screen and (max-width: 1600px) {
+            right: calc(100% + 10px);
+          }
+
+          @media screen and (max-width: 1200px) {
+            right: calc(100% - 50px - 10px);
+          }
+        }
+      }
+    }
+
+    .report-card {
+      background-color: $color9;
+      border-radius: 10px;
+      text-align: center;
+      border-radius: 10px;
+      padding: 30px;
+      height: 100%;
+    }
+  }
+
+  .get-it {
+    .main {
+      background-color: $color1;
+      border-radius: 10px;
+      padding: 50px;
+
+      * {
+        color: #fff;
+      }
+    }
+  }
+
+  .landing-footer {
+    background-color: $color9;
+    margin-bottom: 0;
+
+    .main {
+      padding: 50px 0;
+
+      h4 {
+        margin-bottom: 20px;
+      }
+
+      .links {
+        a {
+          display: block;
+          color: $color6;
+          margin-bottom: 10px;
+
+          &:hover {
+            text-decoration: none;
+            color: $color1;
+          }
+        }
+      }
+    }
+  }
+}
+
 .listing-container {
   height: 100vh;
 
@@ -1137,7 +1648,8 @@
 
     input,
     select,
-    .custom-select-container {
+    .custom-select-container,
+    .uploader {
       background-color: $color9 !important;
     }
 
